Territories can enable or disable fire, explosion and pvp